exports[`test renders correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderBottomWidth": 0.5,
      "borderColor": "#CECED2",
      "opacity": 1,
      "padding": 10,
    }
  }
  testID={undefined}>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }>
    <Image
      source={
        Object {
          "uri": "url",
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 27,
            "height": 54,
            "width": 54,
          },
          Object {
            "marginRight": 10,
          },
        ]
      } />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            undefined,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail">
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#654C50",
                  "fontFamily": "Avenir",
                  "fontSize": 18,
                },
                Array [
                  Object {},
                  undefined,
                ],
              ]
            }>
            Foo
          </Text>
        </Text>
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Array [
              Object {
                "fontSize": 13.5,
              },
              Object {
                "color": "#CECED2",
                "marginTop": 4,
              },
            ],
          ]
        }>
        Há 47 anos
      </Text>
    </View>
  </View>
</View>
`;

exports[`test renders with different color for unread 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#FAF6F1",
      "borderBottomWidth": 0.5,
      "borderColor": "#CECED2",
      "opacity": 1,
      "padding": 10,
    }
  }
  testID={undefined}>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }>
    <Image
      source={
        Object {
          "uri": "url",
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 27,
            "height": 54,
            "width": 54,
          },
          Object {
            "marginRight": 10,
          },
        ]
      } />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            undefined,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail">
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#654C50",
                  "fontFamily": "Avenir",
                  "fontSize": 18,
                },
                Array [
                  Object {},
                  undefined,
                ],
              ]
            }>
            Foo
          </Text>
        </Text>
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Array [
              Object {
                "fontSize": 13.5,
              },
              Object {
                "color": "#CECED2",
                "marginTop": 4,
              },
            ],
          ]
        }>
        Há 47 anos
      </Text>
    </View>
  </View>
</View>
`;

exports[`test renders without image 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderBottomWidth": 0.5,
      "borderColor": "#CECED2",
      "opacity": 1,
      "padding": 10,
    }
  }
  testID={undefined}>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            undefined,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail">
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#654C50",
                  "fontFamily": "Avenir",
                  "fontSize": 18,
                },
                Array [
                  Object {},
                  undefined,
                ],
              ]
            }>
            Foo
          </Text>
        </Text>
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Array [
              Object {
                "fontSize": 13.5,
              },
              Object {
                "color": "#CECED2",
                "marginTop": 4,
              },
            ],
          ]
        }>
        Há 47 anos
      </Text>
    </View>
  </View>
</View>
`;
